syntax = "proto3";

package product;

option go_package = "./pb";

service ProductService {
    // 商品列表
    rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);

    // 获取商品详情
    rpc GetProduct(GetProductRequest) returns (Product);

    // 创建商品
    rpc CreateProduct(CreateProductRequest) returns (Product);

    // 更新商品
    rpc UpdateProduct(UpdateProductRequest) returns (Empty);

    // 删除商品
    rpc DeleteProduct(DeleteProductRequest) returns (Empty);

    // 搜索提示词（联想词）
    rpc SearchSuggestions(SuggestionsRequest) returns (SuggestionsResponse);

    // 搜索商品
    rpc SearchProducts(SearchRequest) returns (SearchResponse);
}

message ListProductsRequest {
    int32 page = 1;
    int32 page_size = 2;
    string keyword = 3; // 商品名关键词搜索
    repeated int64 category_ids = 4; // 分类筛选
}

message ListProductsResponse {
    repeated Product products = 1;
    int32 total = 2;
}

message GetProductRequest {
    int64 product_id = 1;
}

message Product {
    int64 product_id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    int32 stock = 5;
    repeated string images = 6; // 商品图片URL列表
    int64 category_id = 7;
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    float price = 3;
    int32 stock = 4;
    repeated string images = 5;
    int64 category_id = 6;
}

message UpdateProductRequest {
    int64 product_id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    int32 stock = 5;
    repeated string images = 6;
    int64 category_id = 7;
}

message DeleteProductRequest {
    int64 product_id = 1;
}

message Empty {}

message SuggestionsRequest {
    string prefix = 1; // 输入前缀
    int32 limit = 2;   // 返回数量限制
}

message SuggestionsResponse {
    repeated string suggestions = 1;
}

message SearchRequest {
    string keyword = 1;  // 搜索关键词
    int32 page = 2;
    int32 page_size = 3;
}

message ProductBrief {
    int64 product_id = 1;
    string name = 2;
    float price = 3;
    string image_url = 4;
}

message SearchResponse {
    repeated ProductBrief products = 1;
    int32 total = 2;
}
